Changelog
=========


Version 1.5 (in development)
----------------------------

Update SQLAlchemy to 1.4.


Version 1.4.1
-------------

Add workaround for https://bugs.python.org/issue18199.


Version 1.4
-----------

Add support for new minimal countries format in glottolog md.ini files
(see https://github.com/glottolog/glottolog/pull/636). The previous full format
continues to be supported for reading older versions of the repository.


Version 1.3.5
-------------

Add Python 3.9 to test environments and tag support.


Version 1.3.4
-------------

Pin sqlalchemy dependency to version ``1.3.*``.

Add explicit ``.alias()`` or ``.as_scalar()`` to implicit subqueries.

Decrease progress logging verbosity.

Add test checksums for Glottolog v4.3-treedb-fixes.

Improve test reporting, update test environment.


Version 1.3.3
-------------

Restrict foreign key pragma and regexp operator to sqlite3 connections.


Version 1.3.2
-------------

Format timespan years with 4 digits.

Refactor recursive tree queries to improve code sharing.

Simplify stats query and ``iterdescendants()`` query.

Stats.ipynb: fix n_descendants query, add count to min/max boxes, plot more
frequency distributions.


Version 1.3.1
-------------

Fix default root (change from . to ./glottolog/ as documented).

Fix ``treedb.write_json_lines()`` under Python 3.6 when passed a file object.

Extend showcase notebook and test coverage.


Version 1.3
-----------

Add ``treedb.write_json_lines()``.

Use ``lang=None`` outside of the database (checksum change).


Version 1.2
-----------

Normalize providers and sites into lookup tables.

Fix exception when config file is not found.

Improve logging: log sqlite3.Connection to identify in-memory databases,
debug log package location.

Improve tests.


Version 1.1
-----------

Fix some aggregation orders in ``get_json_query()`` that depended on the
insertion order.

Fix ```get_query()`` link markup. Use the same aggregation order as
``get_json_query``.
